--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
 <html>
   <head>
-    <link href="examples.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="application.css" rel="stylesheet" type="text/css">
     <script language="javascript" type="text/javascript" src="jquery.js"></script>
     <script language="javascript" type="text/javascript" src="jquery.flot.js"></script>
     <script language="javascript" type="text/javascript" src="application.js"></script>
   </head>
   <body>
-    <div id="header">
-      <h2>Real-time updates</h2>
-      <div id="conn_status">Unknown</div>
-    </div>
+    <div class="container">
+      <h2>Real Stats</h2>
+      <div id="conn_status"><b class="label">Unknown</b></div>
 
-    <div id="content">
-      <div class="demo-container">
-        <div id="placeholder" class="demo-placeholder"></div>
+      <div class="chart-container">
+        <div id="placeholder" class="chart-placeholder"></div>
       </div>
     </div>
   </body>
